--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@
     font-style: normal;
     font-size: 25px;
     text-align: center;
+    margin: 0px;
+    padding: 0px;
     margin-bottom: 20px;
 }
 
@@ -51,4 +53,6 @@
     width: 90%;
     text-align: center;
     color: hsl(216, 15%, 48%);
+    margin: 0px;
+    padding: 0px
 }
